--- a/package.json
+++ b/package.json
@@ -33,12 +33,16 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
     "@typescript-eslint/parser": "^6.7.2",
+    "autoprefixer": "^10.4.15",
+    "cssnano": "^6.0.1",
     "editorconfig-checker": "^5.1.1",
     "eslint": "^8.49.0",
     "eslint-plugin-astro": "^0.29.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
+    "postcss-preset-env": "^9.1.4",
     "prettier": "^3.0.3",
     "prettier-config-standard": "^7.0.0",
-    "prettier-plugin-astro": "^0.12.0"
+    "prettier-plugin-astro": "^0.12.0",
+    "prettier-plugin-tailwindcss": "^0.5.4"
   }
 }
