--- a/package.json
+++ b/package.json
@@ -22,27 +22,35 @@
     "@astrojs/tailwind": "^5.0.0",
     "@astrojs/ts-plugin": "^1.1.3",
     "@astrojs/vercel": "^5.0.1",
+    "@fontsource-variable/inter": "^5.0.8",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.6",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "astro": "^3.1.1",
+    "astro-navbar": "^2.1.1",
+    "astro-seo": "^0.8.0",
     "react": "^18.2.0",
-    "react-dom": "^18.0.0",
-    "tailwindcss": "^3.0.24",
-    "typescript": "^5.2.2"
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
     "@typescript-eslint/parser": "^6.7.2",
     "autoprefixer": "^10.4.15",
     "cssnano": "^6.0.1",
+    "daisyui": "^3.7.7",
     "editorconfig-checker": "^5.1.1",
     "eslint": "^8.49.0",
     "eslint-plugin-astro": "^0.29.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
+    "postcss": "^8.4.30",
+    "postcss-import": "^15.1.0",
     "postcss-preset-env": "^9.1.4",
     "prettier": "^3.0.3",
     "prettier-config-standard": "^7.0.0",
     "prettier-plugin-astro": "^0.12.0",
-    "prettier-plugin-tailwindcss": "^0.5.4"
+    "prettier-plugin-tailwindcss": "^0.5.4",
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.2.2"
   }
 }
